--- a/src/output.css
+++ b/src/output.css
@@ -776,6 +776,10 @@ video {
   gap: 0.75rem;
 }
 
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -808,6 +812,11 @@ video {
 .border-green-200 {
   --tw-border-opacity: 1;
   border-color: rgb(187 247 208 / var(--tw-border-opacity));
+}
+
+.border-stone-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(28 25 23 / var(--tw-border-opacity));
 }
 
 .border-r-gray-500 {
@@ -868,6 +877,23 @@ video {
 .bg-stone-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(41 37 36 / var(--tw-bg-opacity));
+}
+
+.bg-stone-400\/10 {
+  background-color: rgb(168 162 158 / 0.1);
+}
+
+.bg-stone-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 162 158 / var(--tw-bg-opacity));
+}
+
+.bg-stone-400\/30 {
+  background-color: rgb(168 162 158 / 0.3);
+}
+
+.bg-stone-400\/40 {
+  background-color: rgb(168 162 158 / 0.4);
 }
 
 .bg-hero-pattern {
