--- a/src/output.css
+++ b/src/output.css
@@ -796,6 +796,10 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -900,6 +904,11 @@ video {
   background-color: rgb(168 162 158 / 0.4);
 }
 
+.bg-stone-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 244 / var(--tw-bg-opacity));
+}
+
 .bg-hero-pattern {
   background-image: url('/public/images/adrien-olichon-_GH9LwhlSO4-unsplash.jpg');
 }
@@ -942,6 +951,10 @@ video {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .pb-1 {
